--- a/Style/style.css
+++ b/Style/style.css
@@ -9,8 +9,9 @@
 
   .div1 {
     display: flex;
-    height: 15px;
-    padding: 16px 150px;
+    height: 15%;
+    width: 100%;
+    padding: 15px 0;
     color: #333;
     font-size: 14px;
     background: #fef8d5;
@@ -20,38 +21,39 @@
   .info-image {
     width: 17px;
     height: 17px;
-    margin: 0 7px;
+    margin: 0 0 0 125px;
   }
 
-  .message {
+  .div1 h5 {
     color: #d71921;
     text-decoration: none;
     margin: 0 5px;
+    font-size: 14px;
     font-weight: 600;
   }
 
-  .reminder a{
+  .div1 p a{
     text-decoration: underline;
     color: #333333;
   }
 
-  .reminder a:hover {
+  .div1 p a:hover {
     background-color: rgb(246,246,246);
     text-decoration: none;
   }
 
-  /** The Nav Menu **/
+   /**      Large screens: The Nav Menu **/
 
   nav {
     display: flex;
     background: #333333;
     height: 60px;
     color: #ccc;
-    padding: 0 90px 0 120px;
+    padding: 0;
+    justify-content: space-around;
   }
 
   .menu-items ul {
-    width: 100%;
     display: flex;
     background-color: inherit;
   }
@@ -60,11 +62,24 @@
     background: #d71921;
     width: 90px;
     height: 130px;
-    margin-right: 20px;
+    margin: 0 20px 0 20px;
   }
 
   .logo img {
     margin-top: 62px;
+  }
+
+  @media screen and (min-width: 1024px){
+    .logo {
+      background: #d71921;
+      width: 90px;
+      height: 130px;
+      margin: 0 -80px 0 60px;
+    }
+  
+    .logo img {
+      margin-top: 62px;
+    }
   }
 
   .menu-items li {
@@ -73,31 +88,84 @@
     text-decoration: none;
   }
 
-  .menu-items button{
+  .menu-items label a{
+    position: relative;
     background-color: #333;
     margin: 3px 10px;
     color: #fff;
     border: none;
     font-size: 14px;
     font-weight: 700;
+    text-decoration: none;
   }
 
-  .menu-items button:hover{
+  .menu-items label a:hover{
     background-color: #212121;
-    height: 100%;
+    height: 100vh;
+    margin: 0;
+    padding: 20px 10px;
+  }
+
+  .main-dropdown img{
+    position: absolute;
+    z-index: 99;
+    transform: scale(0);
+    overflow: hidden;
+  }
+
+  .main-dropdown a:hover img {
+    display: block;
+    width: 3px;
+    height: 2px;
+    transform: translate(-50%, 50%) scale(2);
+    padding-left: 40px;
+    margin-top: 8px;
+  }
+
+  .where a:hover img {
+    padding-left: 65px;
+  }
+
+  .expe a:hover img {
+    padding-left: 55px;
+  }
+  
+  .book a:hover img {
+    padding-left: 30px;
+  }
+
+  .help a:hover img {
+    padding-left: 30px;
   }
 
   /* Styling the Links inside the main Drop-down */
 
-  .main-dropdown button {
-
-  }
-  .dropdown-content{
-    height: 300px;
-  }
-  .dropdown-content > div{
+  .dropdown-content {
     display: flex;
-  }
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Style the links inside the dropdown */
+.dropdown-1 a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color on hover */
+.dropdown-1 a:hover {
+    background-color: #f1f1f1;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-1 {
+    display: block;
+}
 
   /* Style the dropdown button */
   .dropdown-content button {
@@ -120,13 +188,7 @@
     text-align: left;
   }
 
-  /* Change color on hover */
-  .dropdown-content a:hover {
-  }
-
-  /* Show the dropdown menu on hover */
-  .main-dropdown:hover .dropdown-content {
-  }
+  /* Show the dropdown menu on click */
 
   /* Styling the Links beside the Nav Menu */
 
@@ -135,7 +197,7 @@
     list-style: none;
     text-decoration: none;
     padding: 4px 2px;
-    margin: 15px 7px 5px 17em;
+    margin: 15px 7px 5px 20vh;
   }
   .other-links a {
     display: inline-flex;
@@ -144,7 +206,7 @@
   }
 
   .other-links img{
-    width: 18px;
+    width: 16px;
     height: 12px;
     padding: 2px 6px;
   }
@@ -155,4 +217,116 @@
     font-size: 14px;
     font-weight: 700;
     margin: 5px 8px;
+  }
+  .small-screen{
+    display: none;
+  }
+
+/* Medium Screens: Small Laptops and Tabs*/
+
+@media only screen and (max-width: 1200px) and (min-width: 1031px) {
+  nav {
+    display: flex;
+    background: #333333;
+    height: 60px;
+    color: #ccc;
+    padding: 0;
+  }
+
+  .logo {
+    background: #d71921;
+    width: 90px;
+    height: 130px;
+    margin: 0 -30px 0 80px;
+  }
+
+  /* Styling the Links beside the Nav Menu */
+
+  .other-links ul {
+    display: flex;
+    list-style: none;
+    text-decoration: none;
+    padding: 2px 1px;
+    margin: 15px 7px 5px 30px;
+  }
+
+  .other-links img{
+    width: 16px;
+    height: 12px;
+    padding: 2px 3px;
+  }
+
+  .other-links ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 700;
+    margin: 3px 2px;
+  }
+}
+
+/*******   Small screens    *******/
+
+  @media screen and (max-width: 1030px) {
+    nav {
+      display: flex;
+      background: #333333;
+      height: 60px;
+      color: #ccc;
+    }
+
+    .menu-items {
+      display: none;
+    }
+  
+    .logo {
+      background: #d71921;
+      width: 90px;
+      height: 120px;
+      margin: 0 20px 0 20px;
+    }
+  
+    .logo img {
+      margin-top: 62px;
+    }
+
+    .other-links{
+      display: none;
+    }
+
+    .small-screen ul {
+      display: flex;
+      list-style: none;
+      text-decoration: none;
+      padding: 4px 2px;
+      margin: 0;
+      
+    }
+    .small-screen a {
+      display: inline-flex;
+      overflow: hidden;
+      background-color: auto;
+    }
+  
+    .small-screen img{
+      width: 16px;
+      height: 12px;
+      padding: 2px 6px;
+    }
+  
+    .small-screen ul li a {
+      text-decoration: none;
+      color: #fff;
+      font-size: 14px;
+      font-weight: 700;
+      margin: 5px 8px;
+    }
+  
+  .small-screen ul li a {
+      text-decoration: none;
+      color: #fff;
+      font-size: 14px;
+      font-weight: 700;
+      margin: 5px 8px;
+    }
   }
