--- a/Style/style.css
+++ b/Style/style.css
@@ -77,6 +77,7 @@
       width: 90px;
       height: 130px;
       margin: 0 -80px 0 60px;
+      z-index: 1;
     }
   
     .logo img {
@@ -141,10 +142,6 @@
   }
 
   /* Styling the Links inside the main Drop-down */
-
-<<<<<<< HEAD
-  .dropdown-content {
-=======
   /* .main-dropdown button {
 
   } */
@@ -152,7 +149,6 @@
     height: 300px;
   }
   .dropdown-content > div{
->>>>>>> bf08c0ca003ea180fb1a305466238c7e7679f119
     display: flex;
     position: absolute;
     background-color: #f9f9f9;
@@ -200,18 +196,6 @@
     text-align: left;
   }
 
-<<<<<<< HEAD
-  /* Show the dropdown menu on click */
-=======
-  /* Change color on hover */
-  /* .dropdown-content a:hover {
-  } */
-
-  /* Show the dropdown menu on hover */
-  /* .main-dropdown:hover .dropdown-content {
-  } */
->>>>>>> bf08c0ca003ea180fb1a305466238c7e7679f119
-
   /* Styling the Links beside the Nav Menu */
 
   .other-links ul {
@@ -240,7 +224,6 @@
     font-weight: 700;
     margin: 5px 8px;
   }
-<<<<<<< HEAD
   .small-screen{
     display: none;
   }
@@ -261,6 +244,7 @@
     width: 90px;
     height: 130px;
     margin: 0 -30px 0 80px;
+    z-index: 1;
   }
 
   /* Styling the Links beside the Nav Menu */
@@ -303,6 +287,7 @@
     }
   
     .logo {
+    z-index: 1;
       background: #d71921;
       width: 90px;
       height: 120px;
@@ -353,7 +338,6 @@
       margin: 5px 8px;
     }
   }
-=======
 
   /* Emirate container */
   .emirate-container{
@@ -2027,4 +2011,3 @@
         
      
     
->>>>>>> bf08c0ca003ea180fb1a305466238c7e7679f119
