--- a/style.css
+++ b/style.css
@@ -1999,6 +1999,90 @@
   
   }
 
+  /*Footer ---Ruth------*/
+
+footer {
+    background-color: #333;
+    border: 0;
+    padding: 20px 50px;
+    margin: 20px;
+
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.container>div {
+    width: 300px;
+}
+
+.container>div .heading {
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: 600;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+}
+
+
+.container>div ul li {
+    list-style: none;
+    margin-bottom: 5px;
+    color: #a9a9a9;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.6rem;
+    font-family: 'Montserrat', sans-serif;
+    cursor: pointer;
+
+}
+
+hr {
+    margin: 30px 0;
+
+}
+
+.container>div ul li:hover {
+    background-color: #f6f6f6;
+    text-decoration: underline;
+
+}
+
+.container>div p {
+    color: #a9a9a9;
+    font-weight: 400;
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    cursor: pointer;
+
+}
+
+a {
+    color: #a9a9a9;
+    font-weight: 400;
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+container>div a:hover {
+    background-color: #f6f6f6;
+
+}
+
+.social icons{
+    margin-right: 6px;
+    margin-bottom: .6rem;
+    color: #000;
+    width: 40px;
+    height: 40px;
+    background-size: 100%;
+    background-position: 50%;
+    background-repeat: no-repeat;
+}
+
  /* media query */
  
  @media (min-width:260px) and (max-width:374px){
@@ -3345,9 +3429,6 @@
      border-radius: 3px;
      font-weight: 600;
  }
-     
- 
- 
      
  }
 
