--- a/Style/style.css
+++ b/Style/style.css
@@ -298,11 +298,7 @@
       margin-top: 62px;
     }
 
-    .other-links{
-      display: none;
-    }
-
-    .small-screen ul {
+    .other-links ul {
       display: flex;
       list-style: none;
       text-decoration: none;
@@ -310,19 +306,19 @@
       margin: 0;
       
     }
-    .small-screen a {
+    .other-links a {
       display: inline-flex;
       overflow: hidden;
       background-color: auto;
     }
   
-    .small-screen img{
+    .other-links img{
       width: 16px;
       height: 12px;
       padding: 2px 6px;
     }
   
-    .small-screen ul li a {
+    .other-links ul li a {
       text-decoration: none;
       color: #fff;
       font-size: 14px;
@@ -330,7 +326,7 @@
       margin: 5px 8px;
     }
   
-  .small-screen ul li a {
+  .other-links ul li a {
       text-decoration: none;
       color: #fff;
       font-size: 14px;
@@ -370,7 +366,7 @@
  .products{
      display: flex;
      flex-direction: column;
-    position: relative;
+     position: relative;
    
  }
  .product-item1{
