--- a/style.css
+++ b/style.css
@@ -967,26 +967,33 @@
 .footer-login{
     position: absolute;
     display: flex;
-    gap: 15px;
     top: 1050px;
     width: 100%;
-    height: 40px;
+    height: 50px;
     background-color: rgb(40, 40, 40);
-    padding:  5px 100px;
+    /* padding:  5px 100px; */
     color: grey; 
     
+}
+.footer-login-text{
+    display: flex;
+    position: relative;
+    left: 180px;
+    top: 10px;
+    gap: 5px;
 }
 .footer-login i{
     font-size: 10px;
     position: relative;
-    top: 15px;
+    top: 10px;
 }
 .footer-login a{
     color: grey;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 13px;
     position: relative;
-    top: 10px;
+    top: 8px;
+    font-family: 'Philosopher', sans-serif;
 }
 .footer-login a:hover{
     color: white;
@@ -996,11 +1003,13 @@
 .footer-login a:first-child{
     font-family: 'Josefin Sans', sans-serif;
     font-size: 20px; 
+    top: 5px;
 }
 .footer-login p{
     font-size: 13.5px;
     position: relative;
-    top: 12px;
+    bottom: -8px;
+
 }
 
 
